<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".SecondActivity">
    <item
            android:id="@+id/returnBtn"
            android:orderInCategory="100"
            android:title="@string/returnBtn"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/helper_checkbox"
            android:title="@string/helper"
            app:showAsAction="ifRoom"
            android:orderInCategory="2"
            android:checkable="true"/>
    <item
            android:id="@+id/start_again"
            android:title="@string/again"
            app:showAsAction="ifRoom"
            android:orderInCategory="3"/>
    <item
            android:id="@+id/saveGame"
            android:title="@string/save"
            app:showAsAction="ifRoom"
            android:orderInCategory="4"/>
</menu>