<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/mainDisplay">
    <Button
            android:id="@+id/startBtn"
            android:text="@string/startBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"/>
    <Button
            android:id="@+id/loadBtn"
            android:text="@string/loadBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/startBtn"/>
    <Button
            android:id="@+id/deleteBtn"
            android:text="@string/deleteBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loadBtn" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"/>
    <!--<Button
            android:id="@+id/exitBtn"
            android:text="@string/exitBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loadBtn" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.644"/> -->
</android.support.constraint.ConstraintLayout>
